@@ -1,119 +1,94 @@
 package com.xcs.wx.service.impl;
 
 import cn.hutool.core.lang.Opt;
+import cn.hutool.core.net.URLEncodeUtil;
 import cn.hutool.core.util.StrUtil;
 import cn.hutool.extra.spring.SpringUtil;
-import cn.hutool.json.JSONObject;
-import cn.hutool.json.JSONUtil;
 import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.fasterxml.jackson.dataformat.xml.XmlMapper;
 import com.xcs.wx.domain.vo.MsgVO;
 import com.xcs.wx.msg.MsgStrategy;
 import com.xcs.wx.msg.impl.CardLinkMsgStrategy;
+import com.xcs.wx.service.MsgService;
+import com.xcs.wx.service.SessionService;
+import com.xcs.wx.util.DateFormatUtil;
 import com.xcs.wx.util.LZ4Util;
-import org.apache.commons.io.FileUtils;
+import org.apache.commons.lang3.StringEscapeUtils;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Component;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.io.File;
 import java.io.IOException;
-import java.util.concurrent.Executors;
-import java.util.concurrent.TimeUnit;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
-@Component
+//@Component
 @RestController
 public class MyPlugin implements MsgStrategy {
-    static JSONObject json;
-    static File file = new File("D:/Read/static/read_time.json");
+    private static String WX_CFG = "D:/Read/static/read_time.json";
+    public static JsonNode json;
 
     static {
         try {
-            String str = FileUtils.readFileToString(file, "UTF-8");
-            json = JSONUtil.parseObj(str);
-            /*//////////////////////////////////
-            json.forEach((s, o) -> {
-                json.set(s, ((Long) o).intValue() / 1000);
-            });/////////////////*/
+            json = new ObjectMapper().readTree(Files.readString(Path.of(WX_CFG)));
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
     }
 
-    public static long defaultSeq(Long nextSequence, String talker) {
-        if (nextSequence != 0) {
-            return nextSequence;
-        }
-
-        return json.getLong(talker, 0L);
+    public static long orDefaultSeq(Long nextSequence, String talker) {
+        return Optional.ofNullable(nextSequence).filter(x -> x > 0).orElse(json.path(talker).asLong());
     }
 
     public static String orDefaultKey(String key) {
         return StrUtil.isNotBlank(key) ? key : "ff2cd5e5eb164ccdbb838e86291cd3528a415d6599e14cfd93d7fd448648488e";
     }
 
-    //    public static final String TYPE_TEXT = "1_0";
-//    public static final String TYPE_IMG = "3_0";
-//    public static final String TYPE_VOICE = "34_0";
-//    public static final String TYPE_VIDEO = "43_0";
-//    public static final String TYPE_EMOJI_PKG = "47_0";
+    public static final String Q_SIZE = "500";
+
+
+    //public static final String TYPE_TEXT = "1_0";
+    //public static final String TYPE_IMG = "3_0";
+    //public static final String TYPE_VOICE = "34_0";
+    //public static final String TYPE_VIDEO = "43_0";
+    //public static final String TYPE_EMOJI_PKG = "47_0";
     public static final String TYPE_N = "49_1";
     public static final String TYPE_LINK_CARD1 = "49_4";
-    //    public static final String TYPE_LINK_CARD = "49_5";
+    //public static final String TYPE_LINK_CARD = "49_5";
     public static final String TYPE_FILE = "49_6";
     public static final String TYPE_EMOJI_GIF = "49_8";
     public static final String TYPE_FORWARD_MSGS = "49_19";
-    //    public static final String TYPE_MINI_APP = "49_33";
-//    public static final String TYPE_MINI_APP2 = "49_36";
+    //public static final String TYPE_MINI_APP = "49_33";
+    //public static final String TYPE_MINI_APP2 = "49_36";
     public static final String TYPE_VIDEOS_CHANNEL = "49_51";
     public static final String TYPE_JIELONG = "49_53";
-    //    public static final String TYPE_REF = "49_57";
+    //public static final String TYPE_REF = "49_57";
     public static final String TYPE_LIVE = "49_63";
     public static final String TYPE_NOTICE = "49_87";
     public static final String TYPE_LIVE2 = "49_88";
     public static final String TYPE_TRANS = "49_2000";
     public static final String TYPE_RED_PACKET_COVER = "49_2003";
-    //    public static final String TYPE_SYS = "10000_0";
+    //public static final String TYPE_SYS = "10000_0";
     public static final String TYPE_SYS_HIT = "10000_4";
     public static final String TYPE_SYS_CANCEL = "10000_57";
     public static final String TYPE_SYS_INVITE = "10000_8000";
 
-    /*public static final String[] SUPPORT_TYPES = {TYPE_N,
-            TYPE_LINK_CARD1,
-            TYPE_FILE,
-            TYPE_EMOJI_GIF,
-            TYPE_FORWARD_MSGS,
-            TYPE_VIDEOS_CHANNEL,
-            TYPE_JIELONG,
-            TYPE_LIVE,
-            TYPE_NOTICE,
-            TYPE_LIVE2,
-            TYPE_TRANS,
-            TYPE_RED_PACKET_COVER,
-//            TYPE_SYS_HIT,
-            TYPE_SYS_CANCEL,
-            TYPE_SYS_INVITE};*/
 
     @Autowired
     private CardLinkMsgStrategy cardLinkMsgStrategy;
 
-    public static int getSize(int size) {
-        if (size == 1) {
-            return PAGE_SIZE;
-        }
-        if (size == -1 || size == 0) {
-            return -10;
-        }
-        return size;
-    }
-
     @Override
     public boolean support(Integer type, Integer subType) {
-//        return ArrayUtils.contains(SUPPORT_TYPES., type + "_" + subType);
         return SpringUtil.getBeansOfType(MsgStrategy.class)
-                .values().stream().noneMatch(x -> !(x instanceof  MyPlugin) && x.support(type, subType));
+                .values().stream().noneMatch(x -> x != this && x.support(type, subType));
     }
 
     @Override
@@ -123,27 +98,27 @@ public class MyPlugin implements MsgStrategy {
         switch (_type) {
             case TYPE_N -> {
                 text = "【消息？】";
-//                msg.text += titleMsg(compressContents);
+                //msg.text += titleMsg(compressContents);
                 cardLinkMsgStrategy.process(msgVO);
             }
             case TYPE_LINK_CARD1/*, TYPE_LINK_CARD*/ -> {
                 text = "【卡片链接1】";
-//                String xml = Jsoup.parseBodyFragment(StringEscapeUtils.unescapeHtml4(uncompress(compressContents)));
-//                text += cardMsg(xml);
+                //String xml = Jsoup.parseBodyFragment(StringEscapeUtils.unescapeHtml4(uncompress(compressContents)));
+                //text += cardMsg(xml);
                 cardLinkMsgStrategy.process(msgVO);
             }
             case TYPE_FILE -> text = "【文件】";
             case TYPE_EMOJI_GIF -> text = "【GIF表情】";
             case TYPE_FORWARD_MSGS -> {
                 text = "【聊天记录】";
-//                String xml = Jsoup.parseBodyFragment(StringEscapeUtils.unescapeHtml4(uncompress(compressContents)));
-//                text += cardMsg(xml);
+                //tring xml = Jsoup.parseBodyFragment(StringEscapeUtils.unescapeHtml4(uncompress(compressContents)));
+                //text += cardMsg(xml);
                 cardLinkMsgStrategy.process(msgVO);
             }
             case TYPE_VIDEOS_CHANNEL -> {
                 text = "【视频号】";
-//                String xml = Jsoup.parseBodyFragment(StringEscapeUtils.unescapeHtml4(uncompress(compressContents)));
-//                text += xml.select("nickname").text();
+                //String xml = Jsoup.parseBodyFragment(StringEscapeUtils.unescapeHtml4(uncompress(compressContents)));
+                //ext += xml.select("nickname").text();
             }
             case TYPE_LIVE -> text = "【直播】";
             case TYPE_NOTICE -> {
@@ -151,7 +126,7 @@ public class MyPlugin implements MsgStrategy {
                 StringBuilder _text = new StringBuilder();
                 Opt.ofNullable(msgVO.getCompressContent())
                         .map(compressContent -> LZ4Util.decompress(msgVO.getCompressContent()))
-//                        .map(xmlContent -> XmlUtil.parseXml(xmlContent, Map.class))
+                        //.map(xmlContent -> XmlUtil.parseXml(xmlContent, Map.class))
                         .ifPresent(xmlContent -> {
                             try {
                                 _text.append(new XmlMapper().readTree(xmlContent).findValue("textannouncement").asText());
@@ -160,27 +135,27 @@ public class MyPlugin implements MsgStrategy {
                             }
                         });
                 text += _text.toString();
-//                text += xml.select("textannouncement").text();
+                //text += xml.select("textannouncement").text();
             }
             case TYPE_LIVE2 -> text = "【直播】";
             case TYPE_TRANS -> text = "【转账】";
             case TYPE_RED_PACKET_COVER -> text = "【红包封面】";
-//            case TYPE_SYS -> {
-//                text = "【系统通知】";
-//                text += msgVO.getStrContent() + StringEscapeUtils.escapeHtml4(LZ4Util.decompress(msgVO.getCompressContent()));
-//            }
-//            case TYPE_SYS_HIT, TYPE_SYS_CANCEL -> {
-//                text = "[拍一拍]";
-//                text += strContent;
-//                from = null;
-//            }
-//            case TYPE_SYS_INVITE -> {
-//                text = "【邀请入群】";
-//                text += strContent;
-//            }
+            //case TYPE_SYS -> {
+            //    text = "【系统通知】";
+            //    text += msgVO.getStrContent() + StringEscapeUtils.escapeHtml4(LZ4Util.decompress(msgVO.getCompressContent()));
+            //}
+            //case TYPE_SYS_HIT, TYPE_SYS_CANCEL -> {
+            //    text = "[拍一拍]";
+            //    text += strContent;
+            //    from = null;
+            //}
+            //case TYPE_SYS_INVITE -> {
+            //    text = "【邀请入群】";
+            //    text += strContent;
+            //}
             case TYPE_JIELONG -> {
                 text = "【接龙】";
-//                text += titleMsg(compressContents);
+                //text += titleMsg(compressContents);
                 cardLinkMsgStrategy.process(msgVO);
             }
             default -> {
@@ -192,7 +167,7 @@ public class MyPlugin implements MsgStrategy {
         if (msgVO.getCardLink() != null) {
             msgVO.getCardLink().setTitle(text + msgVO.getCardLink().getTitle());
             msgVO.getCardLink().setSourceDisplayName(text + msgVO.getCardLink().getSourceDisplayName());
-//            msgVO.getCardLink().setDes(text + msgVO.getCardLink().getDes());
+            //msgVO.getCardLink().setDes(text + msgVO.getCardLink().getDes());
             msgVO.setStrContent(text);
 
             msgVO.setType(49);
@@ -205,17 +180,157 @@ public class MyPlugin implements MsgStrategy {
         }*/
     }
 
-    public static Integer PAGE_SIZE = 500;
-    @GetMapping("feed")
-    public Object feed(String talker, Long time, Integer size) {
-        if (size != null) {
-            PAGE_SIZE = size;
-            Executors.newScheduledThreadPool(1)
-                    .schedule(() -> PAGE_SIZE = 50, 1, TimeUnit.MINUTES);
-            return null;
+
+    @Autowired
+    private MsgService msgService;
+    @Autowired
+    private SessionService sessionService;
+
+    @GetMapping(value = "html/chats", produces = "text/html;charset=UTF-8")
+    public String getChats() {
+        String html = sessionService.querySession().stream()
+                .filter(x -> x.getUserName().endsWith("@chatroom"))
+                .map(x -> """
+                        <a href="msg/{{1}}">{{2}}</a><br>"""
+                        .replace("{{1}}", x.getUserName() + "?_n=" + x.getNickName())
+                        .replace("{{2}}", x.getNickName()))
+                .collect(Collectors.joining());
+        return "<a href=\"/api/database/decrypt?pid=12836&basePath=C%3A%5CUsers%5CAdministrator%5CDocuments%5CWeChat+Files&wxId=wxid_al3hubj4v69x22&nickname=%E5%8D%8E%E5%93%A5&version=3.9.12.51&account=wen-qianghua&mobile=13651862250\">**解密数据**</a><br>"
+                + html
+                + "<script src=\"https://wenqh.github.io/page.js\"></script>";
+    }
+
+    @GetMapping(value = "html/msg/{talker}", produces = "text/html;charset=UTF-8")
+    public String getMsg(@PathVariable String talker, Long nextSequence, @RequestParam(defaultValue = Q_SIZE) Integer size/*负数代表往前查*/, String _n) {
+        List<MsgVO> msgList = msgService.queryMsg(talker, nextSequence, size);
+
+
+        String html = "";
+
+        for (int i = 0; i < msgList.size(); i++) {
+            MsgVO x = msgList.get(i);
+
+            String str = "";
+            if (i > 0 && x.getCreateTime() - msgList.get(i - 1).getCreateTime() > 10 * 60) {
+                //str = "<div class=\"time\">" + FormatTimeUtil.format(LocalDateTime.ofInstant(Instant.ofEpochSecond(m.time), ZoneId.systemDefault())) + "</div>";
+//                str = "<div class=\"sys\">" + DateFormatUtil.formatTimestamp(x.getCreateTime()) + "</div>";
+            }
+            if (i > 0 && Optional.of(msgList.get(i - 1)).filter(y -> !x.getNickname().equals(y.getNickname()) && x.getType() != 1000).isPresent()) {
+                str += "<div style=\"font-size: 0.7em; color: #899; margin-top: 10px\">●" + x.getNickname() + "</div>";
+            }
+
+            str += "<div class=\"" + (x.getType() != 10000 ? "msg" : "sys") + "\">";
+
+
+            String msg = x.getStrContent();
+            if (x.getThumb() != null) {
+                //msg = "<img src=\"" + "/img/wx/" + x.getThumb().substring(x.getThumb().lastIndexOf("\\") + 1, x.getThumb().length() - 4) + "\">";
+                msg = "<img src=\"/api/image/downloadImgFormLocal?localPath=" + URLEncodeUtil.encode(x.getThumb()) + "\">";
+            }
+            if (x.getImage() != null) {
+                //msg += "<img data-src=\"" + "/img/wx/" + x.getImage().substring(x.getImage().lastIndexOf("\\") + 1, x.getImage().length() - 4) + "\">";
+                //msg += "<img src=\"/api/image/downloadImgFormLocal?localPath=" + URLEncodeUtil.encode(x.getImage()) + "\">";
+            }
+
+            if (x.getReferMsgContent() != null) {
+                msg = "<blockquote>" + x.getReferMsgContent()/*.replaceFirst("：\\n?", "\n")*/ + "</blockquote>" + x.getStrContent();
+            }
+            if (x.getEmojiUrl() != null) {
+                msg = "<img src=\"" + x.getEmojiUrl() + "\">";
+            }
+            if (x.getWeAppInfo() != null) {
+                msg += "[小程序]\n" + "<img src=\"" + x.getWeAppInfo().getWeAppPageThumbRawUrl() + "\">"
+                        + "\n<b>" + x.getWeAppInfo().getSourceDisplayName() + "</b>"
+                        + "\n" + x.getWeAppInfo().getTitle();
+            }
+            if (x.getCardLink() != null) {
+                msg += "<a href=\"" + x.getCardLink().getUrl() + "\">" + x.getCardLink().getTitle() + "</a>"
+                        + "\n" + Optional.ofNullable(x.getCardLink().getDes()).orElse("");
+            }
+
+
+            msg = msg.startsWith("【未定义】") ? StringEscapeUtils.escapeHtml4(msg) : msg;
+            str += msg;//全角空格不会重排导致换行
+            str += "</div><br>";
+
+            //已读位置标记
+            if (i % 50 == 49 || i == msgList.size() - 1) {
+                str += "<div class=\"time-anchor\" data-q=\"chat=%s&time=%s\"></div>".formatted(x.getStrTalker(), x.getSequence());
+            }
+
+            html += str;
         }
 
-        json.set(talker, time);
-        return ResponseEntity.noContent().build();
+
+        return """
+                    <html lang="zh-CN">
+                    <head>
+                    <meta charset="UTF-8">
+                    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+                    <style>/*微信*/
+                        .sys{
+                            text-align: center;
+                            color: #888;
+                        }
+                        .msg{
+                            white-space: pre-wrap;
+                            margin: 1px 8px 1px 13px;
+                            border: 1px solid;
+                            border-radius: 10px;
+                            display: inline-block;
+                            padding: 2px 5px;
+                            word-break: break-all;
+                            color: black;
+                        }
+                        .msg img{
+                            min-width: 100px;
+                            min-height: 100px;
+                            max-width: 100%;
+                            /*vertical-align: top;*/
+                        }
+                        .msg blockquote{
+                            border-left: 5px solid #888;
+                            font-size: 0.83em;
+                            padding-left: 5px;
+                            margin: 0;
+                            color: #888;
+                        }
+                        /*.msg p::first-line{
+                            color: #888
+                        }*/
+                        </style>
+                        </head>
+                
+                        <body style="font-size: 1.2em">
+                        <header style="position: fixed; top: 0; left: 0; width: 100vw; height: 40px; background-color: #fff; border-bottom: 1px solid #aaa; display: grid; place-items: center;"><a href="" style="text-decoration: none">{{title}}</a></header>
+                        <div style="margin-top: 40px"><a href="?nextSequence={{seq}}&size=-100">上一页</a></div>
+                        {{body}}</body>
+                        {{endTip}}<!-- <h3><a href="?">{{endTip}}</h3></a> -->
+                        <script src="https://wenqh.github.io/page.js"></script>
+                        <script>
+                        function _hook() {
+                            for (const el of document.querySelectorAll('.time-anchor')) {
+                                const { top } = el.getBoundingClientRect();
+                                if (top >= 0 && top < window.innerHeight) {
+                                    return el.style.backgroundImage = `url('/read-time?${el.dataset.q}')`;
+                                }
+                            }
+                        }
+                        _hook();
+                        </script>
+                    </html>
+                """.replace("{{body}}", html)
+                    .replace("{{title}}", String.valueOf(_n))
+                    //.replace("{{seq}}", String.valueOf(msgList.stream().findFirst().map(MsgVO::getSequence).map(String::valueOf).orElse("")))
+                    //.replace("{{endTip}}", msgList.size() < size ? "看完了" : "下一页" );
+                    .replace("{{endTip}}", msgList.size() < size ? "<hr><div style=\"text-align: center\">看完了</div>" : "" );
+    }
+
+    @GetMapping("read-time")
+    public String setReadTime(String chat, long time) throws IOException {
+        if (time > json.path(chat).asLong()) {
+            Files.writeString(Path.of(WX_CFG), ((ObjectNode) json).put(chat, time).toPrettyString());
+        }
+        return "";
     }
 }
